--- a/hermes.gpx.converters/hermes.gpx.converters.csproj
+++ b/hermes.gpx.converters/hermes.gpx.converters.csproj
@@ -38,12 +38,15 @@
     <Reference Include="NLog">
       <HintPath>..\packages\NLog.4.2.3\lib\net45\NLog.dll</HintPath>
     </Reference>
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IHermesGpxFileConverter.cs" />
     <Compile Include="HermesGpxFileConverterArg.cs" />
     <Compile Include="GpxFileConverterExtentionMethods.cs" />
+    <Compile Include="PointsComparer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
