мелкие изменения в исходном коде, расширение статических методов обработки маршрутов данных

--- a/Hermes.Api.Clasess.Geo/Hermes.Api.Clasess.Geo.csproj
+++ b/Hermes.Api.Clasess.Geo/Hermes.Api.Clasess.Geo.csproj
@@ -32,6 +32,15 @@
     <Reference Include="Distributor.Api.Core">
       <HintPath>..\packages\Distributor.Api.Core.1.0.0.2\lib\Distributor.Api.Core.dll</HintPath>
     </Reference>
+    <Reference Include="NLog">
+      <HintPath>..\packages\NLog.4.2.3\lib\net45\NLog.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="GeoJSON.Net">
+      <HintPath>..\packages\GeoJSON.Net.0.1.45\lib\portable-net40+sl5+wp80+win8+wpa81\GeoJSON.Net.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -43,4 +52,7 @@
     <Compile Include="Track.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
